--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thực Vật Việt Nam</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
