--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thực Vật Việt Nam</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
             <div class="plant">
                 <h2>Cây Dừa:</h2>
               <figure>
-                <img src="/RES/caydua.png">
+                <img src="../RES/caydua.png">
                 <figcaption><em>(Nguồn: Internet)</em></figcaption>
                 <figure>
               Cây dừa (Coconut) là loại cây cỏ thuộc họ Arecaceae, được biết đến với tên gọi phổ biến là "cây dừa". Ở Việt Nam, cây dừa phân bố rộng rãi từ vùng ven biển đến các khu vực núi đồi với mục đích sử dụng đa dạng từ trồng để thu hoạch quả, sử dụng lá làm vật liệu xây dựng truyền thống, đến sản xuất dầu dừa và sử dụng trong nghệ thuật trang trí.
@@ -37,7 +37,7 @@
             <div class="plant">
             <h2>Cây cà phê:</h2>
               <figure>
-                <img src="/RES/caycaphe.png">
+                <img src="../RES/caycaphe.png">
                 <figcaption><em>(Nguồn: Internet)</em></figcaption>
                 <figure>
 Cây cà phê (Coffea) là một loại cây thân gỗ, thuộc họ Rubiaceae. Tại Việt Nam, cây cà phê được trồng phổ biến ở các vùng núi có độ cao từ 500 đến 1.500 mét so với mực nước biển, như Đà Lạt, Kontum, và Buôn Ma Thuột. Cây cà phê được trồng với mục đích sản xuất hạt cà phê, một trong những nguồn thu nhập chính của nhiều hộ gia đình và khu vực trồng cây cà phê.
