--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,6 +17,12 @@
             <a href="#cay-che">Cây Chè</a>
         </nav>
     </header>
+    <div class="community">
+        <h2 style="font-size: 40px;">Giới Thiệu Về Cộng Đồng Chúng Tôi</h2>
+        <p style="font-size: 20px;">
+Chào mừng bạn đến với "Cây Cỏ Việt Nam"! Chúng tôi là một cộng đồng đam mê về thực vật, tập trung vào việc khám phá và chia sẻ kiến thức về các loại cây cỏ độc đáo ở Việt Nam. Mục tiêu của chúng tôi là tạo ra một môi trường thú vị và học hỏi, nơi mọi người có thể cùng nhau khám phá và hiểu biết về sự đa dạng của thế giới thực vật tại đất nước chúng ta. Hãy cùng chúng tôi trải nghiệm và khám phá vẻ đẹp của "Cây Cỏ Việt Nam"!
+        </p>
+    </div>
     <div class="container">
         <div class="wrapper">
             <div class="plant" id="cay-dua">
