--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1><strong>Cây Cỏ Việt Nam Đa Dạng Hơn Bao Giờ Hết</strong></h1>
         <nav>
-            <a href="https://dtrungne.github.io/thucvatvietnam/">Trang chủ</a>
+            <a href="https://dtrungne.github.io/MyWebsite/HTML/index.html">Trang chủ</a>
             <a href="#cay-dua">Cây Dừa</a>
             <a href="#ca-phe">Cây Cà Phê</a>
             <a href="#cay-thanh-long">Cây Thanh Long</a>
