--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thực Vật Việt Nam</title>e/png
-    <link rel="icon" href="title.png" type="image/png">
+    <link rel="icon" href="../Favicon/title.png" type="image/png">
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
